# mask

./: Cargo.toml  README.md
assets/models/: links
assets/shaders/: mesh_shader.wgsl  shader.wgsl
src/: main.rs  mesh_annotations.rs  render.rs  texture.rs
